Renaming project (Happi -> Hapi)

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "Happi"
+name = "Hapi"
 uuid = "97f9405e-34b9-4b4f-8534-a6405e9bb57c"
 authors = ["a-poor <45295232+a-poor@users.noreply.github.com>"]
 version = "0.1.0"
